--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,6 @@
 <!-- views/partials/navbar.ejs -->
- <nav class="navbar navbar-expand-lg navbar-light bg-ligh">
+ <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
+						 
 <a class="navbar-brand" href="/">Mi Sitio</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span>
 </button>
@@ -28,7 +29,11 @@
     <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
    </form>
+	 
    <a href="/users/signup" class="btn btn-outline-dark"> SIGN UP </a>	
    <a href="/users/signin" class="btn btn-outline-dark"> SIGN IN </a>
+   <a href="/users/logout" class="btn btn-danger"> LOG OUT </a>
+						        
   </div>
   </nav>
+
