--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -14,11 +14,46 @@
  <body class="signin">
  <%- include('partials/navbar'); %>
  
-
+   <div class="row"> 
+   <div class="col-md-4 mx-auto"> 
+    <div class="card mt-4 text-center text-white bg-dark "> 
+     <div class="card-header text-white bg-dark""> 
+      <h1>Login</h1> 
+     </div> 
+     <img src="/img/logo.jpg" class="rounded-circle mx-auto d-block m-4 logo" alt="Logo"> 
+     <div class="card-body"> 
+      <form action="/users/signin" method="POST">
+       <div class="form-group"> 
+        <input type="email" class="form-control" name="email" placeholder="Email" autofocus> 
+       </div> 
+       
+       <div class="form-group">
+       <input type="password" class="form-control" name="password" placeholder="Contraseña"> 
+       </div> 
+       
+       <div class="form-group">
+       <button type="submit" class="btn btn-primary btn-success btn-block" >
+         Accesa al lado oscuro
+      </button>
+      </div> 
+      </form> 
+     </div> 
+    </div> 
+   </div> 
+  </div> 
 
 
    <%- include('partials/footer'); %>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="../javascripts/menu.js"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+    <script src="../javascripts/geo.js"></script>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v8.0&appId=1001410510286632&autoLogAppEvents=1" nonce="9e07JN68"></script
+    <script async src="https://cdn.snipcart.com/themes/v3.0.23/default/snipcart.js"></script>
+    <div hidden id="snipcart" data-api-key="MWJjMzA0MGEtZDI4ZS00OGNlLTgyZjktNjRlOTk2MmIzOGZkNjM3MzgzOTY5MzE1NDgyMzM5"></div>
   </body>
 </html>
