Actualizacion 22 de octubre del 2020

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,11 +11,11 @@
 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> API´s </a> 													
  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
     <a class="dropdown-item" href="/geolocalizacion">Geolocalización</a>
-    <a class="dropdown-item" href="/twitter">Redes sociales</a>
-    <a class="dropdown-item" href="/compras">Ecommerce</a>
-    <a class="dropdown-item" href="#">Streaming</a>
+    <a class="dropdown-item" href="/twitter">Me gustas!!!</a>  
+    <a class="dropdown-item" href="/compras">Compra musica!!!</a>
+    <a class="dropdown-item" href="/stream">Videos</a>
     <div class="dropdown-divider"></div>
-    <a class="dropdown-item" href="#">Otra</a>
+    <a class="dropdown-item" href="/clima">Otra</a>
     </div>
     </li>
 
