--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -63,7 +63,7 @@ body#acercade .jumbotrontext-center p {
   color: #121212;
 }
 
-body#acercade body img {
+body#acercade .div img {	
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -104,3 +104,15 @@ body.twitter {
 body.signin .logo { 
    width: 30%;
 }
+
+body#vimeo { 
+   background: #E55D87;  /* fallback for old browsers */
+   background: -webkit-linear-gradient(to right, #5FC3E4, #E55D87);  /* Chrome 10-25, Safari 5.1-6 */
+   background: linear-gradient(to right, #5FC3E4, #E55D87); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+body#vimeo h1{
+  text-align: center;
+  color: white;
+  background-color:black;
+ }
+ 
