--- a/views/acercade.ejs
+++ b/views/acercade.ejs
@@ -13,7 +13,11 @@
    <h1>Acerca de mi</h1> 
    <p>Sebastian Eduardo Ramirez Bocanegra</p> 
   </div> 
-  <img src="https://www.tierragamer.com/wp-content/uploads/2017/01/legend-zelda-breath-wild-2.jpg" class="img-fluid" alt="Responsive image"> 
+   <div class="row">
+    <div class="mx-auto">
+    <img src="https://www.tierragamer.com/wp-content/uploads/2017/01/legend-zelda-breath-wild-2.jpg" class="img-fluid" alt="Responsive image">
+  </div>
+  </div>
   <div class="texto"> 
    <p>Hola soy sebas futura baja de la untg me gusta cocinar, cantar aunque la verdad ninguna de estas dos las hago bien me gustan al igual que esta carreta siempre hay algo aprender, o nuevos desafíos, la música que me gusta es diferente me gustan los rolling stones, Bad bunny, Lorde, cosas variadas soy de San Miguel de Allende y me encanta todo lo que marea.</p>  </div> 
   <a href="/" class="btn btn-primary btn-sm" role="button">Volver</a>		   
