--- a/views/partials/script.ejs
+++ b/views/partials/script.ejs
@@ -5,6 +5,7 @@
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
 <script src="./javascripts/geo.js"></script>
+<script src="./javascripts/clima.js"></script>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v8.0&appId=1001410510286632&autoLogAppEvents=1" nonce="9e07JN68"></script
 <script async src="https://cdn.snipcart.com/themes/v3.0.23/default/snipcart.js"></script> 
