--- a/public/stylesheets/styleGeo.css
+++ b/public/stylesheets/styleGeo.css
@@ -1,3 +1,6 @@
+/*  Nombre del autor: Sebastian Eduardo Ramirez Bocanegra
+           Objetivo de archivo: Estilos de la pagiba geolocalizacion
+       Fecha y hora: 29/10/2020 */						
 body {
   padding: 0;
   margin: 0;
