--- a/views/compras.ejs
+++ b/views/compras.ejs
@@ -1,3 +1,6 @@
+  <!-- Nombre del autor: Sebastian Eduardo Ramirez Bocanegra
+       Objetivo de archivo: Mostrar Api de compras con la compra de canciones
+       Fecha y hora: 29/10/2020 \-->
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -28,7 +31,8 @@
    <source src="/audio/dearapril.mp3" type="audio/mp3">
    </audio>		    
 		
-         <button class="snipcart-add-item btn btn-dark btn-block" data-item-id="Dear_april"
+         <button class="snipcart-add-item btn btn-dark btn-block" 
+	 data-item-id="Dear_april"							  
           data-item-price="29.99" data-item-url="http://www.mediafire.com/file/geyff0yf0xa5870/Dear_April_%2528Side_A_-_Acoustic%2529.mp3/file" 
 	  data-item-description="Dear April is an emotional love ballad from Frank, featuring him explaining to his significant other how their 
 	  relationship will never be the same. The track features a backing from an organ instrumental and has Frank’s vocals coming in and out of the forefront of the track.
@@ -56,11 +60,12 @@
    <source src="/audio/jeans.mp3" type="audio/mp3">
    </audio>		    
 
-         <button class="snipcart-add-item btn btn-dark btn-block" data-item-id="Jeans" 
+         <button class="snipcart-add-item btn btn-dark btn-block" 
+         data-item-id="Jeans"
          data-item-price="19.99" data-item-url="http://www.mediafire.com/file/x7vxer9w2dj4zvm/AQUIHAYAQUIHAY_-_Jeans.mp3/file"
 	 data-item-description="Jeans the debut single of AQUIHAYAQUIHAY is a manual for love and all its stages, since everything is beautiful until when you do not want to know more about it, 
 	representing the way to love and hate yourself, laugh or cry, real life dualities."
-         data-item-image="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRlGLmC8KqQg5sqx8KVvD_hLMfi0F4FsetFBA&amp;usqp=CAU" data-item-name="Frank ocean - Dear April"> Comprar <i class="fas fa-shopping-cart"></i> </button> 
+         data-item-image="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRlGLmC8KqQg5sqx8KVvD_hLMfi0F4FsetFBA&amp;usqp=CAU" data-item-name="AquihayAquihay - Jeans"> Comprar <i class="fas fa-shopping-cart"></i> </button> 
         </div> 
        </div> 
       </div> 
@@ -124,7 +129,7 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR7raLi5Xh40Cj4iajmF4SWgkgxvo7KrYChlA&amp;usqp=CAU" alt="Jeans album cover" class="card-img-top"> 
         <div class="momma-body"> 
           <h2>Me and Your Mama - Childish Gambino</h2>
-          <h3>19.99 $</h3>
+          <h3>59.99 $</h3>
          <p>"Me and Your Mama" is a single by American rapper and singer Childish Gambino. It was released on November 10, 2016 worldwide, and is the first single from his third studio album "Awaken, My Love!"</p>  
        </div> 
         <div class="mooma-footer"> 
@@ -135,7 +140,7 @@
 
          <button class="snipcart-add-item btn btn-dark btn-block" 
 	 data-item-id="mooma" data-item-price="59.99" data-item-url="/paintings/starry-night" 
-	 data-item-description="Me and Your Mama is a single by American rapper and singer Childish Gambino. It was released on November 10, 2016 worldwide, and is the first single from his third studio album Awaken, My Love!"
+	 data-item-description="Me and Your Mama is a single by American rapper and singer Childish Gambino. It was released on November 10, 2016 worldwide, and is the first single from his third studio album Awaken, My Love!"															
 	 data-item-image="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR7raLi5Xh40Cj4iajmF4SWgkgxvo7KrYChlA&amp;usqp=CAU" data-item-name="Childish Gambino - Me and Your Mama"> Comprar <i class="fas fa-shopping-cart"></i> </button> 
         </div> 
        </div> 
