--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,3 +1,6 @@
+  <!-- Nombre del autor: Sebastian Eduardo Ramirez Bocanegra
+       Objetivo de archivo: Barra de navegacion que nos redirigen a las otras paginas
+       Fecha y hora: 29/10/2020 \-->
 <!-- views/partials/navbar.ejs -->
  <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
 						 
