--- a/views/twitter.ejs
+++ b/views/twitter.ejs
@@ -1,3 +1,6 @@
+  <!-- Nombre del autor: Sebastian Eduardo Ramirez Bocanegra
+       Objetivo de archivo: Mostrar Api de Redes Sociales
+       Fecha y hora: 29/10/2020 \-->  
 <!DOCTYPE html>
 <html lang="es">  
   <head>    
