--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,6 @@
+/*  Nombre del autor: Sebastian Eduardo Ramirez Bocanegra
+           Objetivo de archivo: estilos de casi todas las paginas del proyecto
+       Fecha y hora: 29/10/2020 */						
 .bg-3 {      
  background-color: #ffffff;	  
  color: #555555;
