--- a/public/stylesheets/styleclima.css
+++ b/public/stylesheets/styleclima.css
@@ -1,3 +1,6 @@
+/*  Nombre del autor: Sebastian Eduardo Ramirez Bocanegra
+           Objetivo de archivo: estilos de la aplicacion de clima
+       Fecha y hora: 29/10/2020 */						
 * {
   margin: 0;
   padding: 0;
