--- a/views/acercade.ejs
+++ b/views/acercade.ejs
@@ -1,6 +1,8 @@
+  <!-- Nombre del autor: Sebastian Eduardo Ramirez Bocanegra
+       Objetivo de archivo: Pagina acerca de mostrar descripcion del desarrollador
+       Fecha y hora: 29/10/2020 \-->
 <!doctype html>
-<html >
-     
+<html >     
  <head> 
    <head>
   <title>Acerca de mi
@@ -26,3 +28,4 @@
  </body>
 </html>
   
+
