--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,6 @@
+  <!-- Nombre del autor: Sebastian Eduardo Ramirez Bocanegra
+       Objetivo de archivo: Mostrar la pagina de inicio, la presebtacion de la pagina
+       Fecha y hora: 29/10/2020 \-->
 <!DOCTYPE html>
 <html lang="es">
   <head>
