--- a/views/indexsignin.ejs
+++ b/views/indexsignin.ejs
@@ -1,3 +1,6 @@
+  <!-- Nombre del autor: Sebastian Eduardo Ramirez Bocanegra
+       Objetivo de archivo: Mostrar pagina de inicio de un usuario logeado
+       Fecha y hora: 29/10/2020 \-->
 <!DOCTYPE html>
 <html lang="es">
   <head>
