--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,6 @@
+  <!-- Nombre del autor: Sebastian Eduardo Ramirez Bocanegra
+       Objetivo de archivo: Pie de pagina
+       Fecha y hora: 29/10/2020 \-->		  
 <!-- views/partials/footer.ejs -->
 <footer class="footer">
   <p>© 2020 No pedi permiso :):(.</p>
