--- a/views/stream.ejs
+++ b/views/stream.ejs
@@ -1,3 +1,6 @@
+  <!-- Nombre del autor: Sebastian Eduardo Ramirez Bocanegra
+       Objetivo de archivo: Mostrar Api de stream
+       Fecha y hora: 29/10/2020 \-->		
 <!doctype html>
 <html lang="es">
  <head> 
