--- a/views/partials/navbarRegistrados.ejs
+++ b/views/partials/navbarRegistrados.ejs
@@ -1,30 +1,35 @@
-  <!-- Nombre del autor: Sebastian Eduardo Ramirez Bocanegra
+<!-- Nombre del autor: Sebastian Eduardo Ramirez Bocanegra
        Objetivo de archivo: Barra de navegacion que nos redirigen a las otras paginas
-       Fecha y hora: 29/10/2020 \-->
-<!-- views/partials/navbar.ejs -->
- <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
-						 
+       Fecha y hora: 29/10/2020 \-->			
+<nav class="navbar navbar-expand-lg navbar-light bg-info">
 <a class="navbar-brand" href="/">Mi Sitio</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span>
 </button>
  <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-    <li class="nav-item active">      
+    <li class="nav-item active">
  <li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> API´s </a> 													
+<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> API´s </a>
+
  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
     <a class="dropdown-item" href="/geolocalizacion">Geolocalización</a>
     <div class="dropdown-divider"></div>
-    <a class="dropdown-item" href="/twitter">Me gustas!!!</a>  
+    <a class="dropdown-item" href="/twitter">Me gustas!!!</a>
     <div class="dropdown-divider"></div>
     <a class="dropdown-item" href="/compras">Compra musica!!!</a>
     <div class="dropdown-divider"></div>
     <a class="dropdown-item" href="/stream">Videos</a>
     <div class="dropdown-divider"></div>
     <a class="dropdown-item" href="/clima">Otra</a>
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" href="/ventas">Ventas</a>
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" href="/productos">Productos</a>
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" href="/vendedor">Vendedores</a>
     </div>
      </li>
- 
+
    <li class="nav-item">
       <a class="nav-link" href="/acercade">Acerca de</a>
    </li>
@@ -35,9 +40,10 @@
     <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
    </form>
-	 
-   <a href="/users/signup" class="btn btn-outline-dark"> SIGN UP </a>	
-   <a href="/users/signin" class="btn btn-outline-dark"> SIGN IN </a>						        
+
+    <a href="/users/logout" class="btn btn-danger"> LOG OUT </a>
+
   </div>
   </nav>
+
 
