--- a/views/add.ejs
+++ b/views/add.ejs
@@ -12,7 +12,7 @@
  </head>
 
  <body id='index' >
-        <%- include('partials/navbar'); %>
+        <%- include('partials/navbarRegistrados'); %>
 
     <% if (mensaje) { %>
       <div class="alert alert-danger" role="alert">
@@ -26,24 +26,23 @@
             <form action="/ventas/add" method="post">
               <div class="form-group">
                 <label>Clave de la venta:</label>
-                <input type="number" class="form-control" name="claveVentas" value="<%= claveVentas %>"  autocomplete="off">    
-              </div>
-
-             <div class="form-group"> 
-               <label>Clave del vendedor:</label> 
-                <select type="number" class="form-control" name="claveVendedor" value="<%= claveVendedor %>">	
-                 <option>10001</option>
-                 <option>10002</option>
-                 <option>10003</option> 
-                 <option>10004</option>
-                 <option>10005</option>
-                 <option>10006</option>
-              </select> 
+                <input type="number" class="form-control" name="claveVentas" value="<%= claveVentas %>"  autocomplete="off" required >	     
+              </div>											
+             <div class="form-group">
+               <label>Clave del vendedor:</label>							   
+                <select type="number" class="form-control" name="claveVendedor" value="<%= claveVendedor %>" required>	
+                   <option>10001</option>
+                   <option>10002</option>
+                   <option>10003</option>
+                   <option>10004</option>
+                   <option>10005</option>
+                   <option>10006</option>
+             </select>										
             </div> 
-   
+
            <div class="form-group"> 
             <label>Clave del Producto:</label> 
-              <select type="number" class="form-control" name="claveProducto" value="<%= claveProducto %>">
+              <select type="number" class="form-control" name="claveProducto" value="<%= claveProducto %>  required">
                  <option>21000</option>
                  <option>22000</option> 
                  <option>23000</option>
@@ -58,13 +57,13 @@
           </div> 
 
              <div class="form-group">
-                <label>kilos:</label>				 
-                <input type="number" class="form-control" name="kilos" value="<%= kilos %>" autocomplete="off">
+                <label>kilos:</label>		      
+                <input type="number" class="form-control" name="kilos" value="<%= kilos %>" autocomplete="off" required>
              </div>
 
              <div class="form-group">
-                <label>Pagado:</label>
-		<select type="text" class="form-control" name="pagado" value="<%= pagado %>">		      
+                <label>Pagado:</label>							   
+		<select type="text" class="form-control" name="pagado" value="<%= pagado %> required">		      
                  <option>true</option> 
                  <option>false</option>
               </select>
@@ -72,7 +71,8 @@
 
              <div class="form-group">
                 <input type="submit" class="btn btn-info" value="Agregar" />
-             </div>
+		<a href="/ventas" class="btn btn-dark" >Volver</a>
+             </div>    
           </form>
        </div>
     </div>
@@ -83,10 +83,5 @@
  </html>
 
  
-
-
-
-
-
 
 
