--- a/views/editar.ejs
+++ b/views/editar.ejs
@@ -12,8 +12,8 @@
  </head>
 
  <body id='index' >
-        <%- include('partials/navbar'); %>
-
+        <%- include('partials/navbarRegistrados'); %>
+				    
     <% if (mensaje) { %>
       <div class="alert alert-danger" role="alert">
         <%- mensaje %>
