--- a/views/indexsignin.ejs
+++ b/views/indexsignin.ejs
@@ -11,40 +11,7 @@
  </head>
 
  <body id='index' >
-       <!-- views/partials/navbar.ejs -->
- <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
-
-<a class="navbar-brand" href="/">Mi Sitio</a>
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span>
-</button>
- <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-    <li class="nav-item active">
- <li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> API´s </a>
- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-    <a class="dropdown-item" href="/geolocalizacion">Geolocalización</a>
-    <a class="dropdown-item" href="/twitter">Redes sociales</a>
-    <a class="dropdown-item" href="/compras">Ecommerce</a>
-    <a class="dropdown-item" href="#">Streaming</a>
-    <div class="dropdown-divider"></div>
-    <a class="dropdown-item" href="#">Otra</a>
-    </div>
-    </li>
-
-   <li class="nav-item">
-      <a class="nav-link" href="/acercade">Acerca de</a>
-   </li>
-  </ul>
- <div class="fb-login-button" data-size="small" data-button-type="login_with" data-layout="rounded" data-auto-logout-link="true" data-use-continue-as="true" data-width=""></div>
-
-   <form class="form-inline my-2 my-lg-0">
-    <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-   </form>
-
-    <a href="/users/logout" class="btn btn-danger"> LOG OUT </a>
-
+       <%- include('partials/navbarRegistrados'); %> 	 
   </div>
   </nav>
 
