--- a/views/ventas.ejs
+++ b/views/ventas.ejs
@@ -11,8 +11,8 @@
  </head>
  <body id='index' >
 
-        <%- include('partials/navbar'); %>
-
+        <%- include('partials/navbarRegistrados'); %>
+				  
    <div class="container">
      <div class="form-row">
 
@@ -45,7 +45,8 @@
       <th>Fecha</th>
 
       <th>Pagado</th>
-
+ 
+      <th>  </th>
  </tr>
  </thead>
  <tbody>
@@ -73,11 +74,11 @@
  <td>							     
 <a class="btn btn-warning fa fa-eye view" href="../ventas/view/<%=data[i].claveVentas%>">
 
-<a class="btn btn-success fa fa-pencil-square-o edit" href="../ventas/editar/<%=data[i].claveVentas%>"> </a>												  
-	     
+<a class="btn btn-success fa fa-pencil-square-o edit" href="../ventas/editar/<%=data[i].claveVentas%>"> </a>
+
 <a class="btn btn-danger fa fa-trash  delete" onclick="return alert('¿Estas seguro?')" href="../ventas/delete/<%=data[i].claveVentas%>"> </a>
 
- </td>																				
+ </td>
  </tr>
  <% } %>
  <% } %>
