--- a/views/view.ejs
+++ b/views/view.ejs
@@ -12,7 +12,7 @@
  </head>								        
 
  <body id='index' >
-        <%- include('partials/navbar'); %>
+        <%- include('partials/navbarRegistrados'); %>
 
     <% if (mensaje) { %>
       <div class="alert alert-danger" role="alert">
@@ -27,7 +27,7 @@
 		
 		<!-- <div class="form-group">
                 <label>ID:</label>	
-                <input type="number" class="form-control" value="<%= data.id %>" readonly>
+                <input type="number" class="form-control" value="<%= data._id %>" readonly>
               </div> \-->
 		 
               <div class="form-group">
