--- a/views/partials/navbarRegistrados.ejs
+++ b/views/partials/navbarRegistrados.ejs
@@ -2,7 +2,7 @@
        Objetivo de archivo: Barra de navegacion que nos redirigen a las otras paginas
        Fecha y hora: 29/10/2020 \-->			
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
-<a class="navbar-brand" href="/">Mi Sitio</a>
+<a class="navbar-brand" href="/indexSignIn">Mi Sitio</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span>
 </button>
  <div class="collapse navbar-collapse" id="navbarSupportedContent">
